noselect prevents text input on mobile

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -8,6 +8,13 @@
     user-select: none;
 }
 
+.allowSelect {
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
 #joinDialog {
     position: absolute;
     width: 100%;
